# g4_experiments

./: CMakeLists.txt  STM32G431.svd  STM32G431CBU.ld  STM32G474RET.ld  foo.c  main.c  sin.h  startup.c  startup_stm32g474xx.c  syscalls.c
hal/: gpio.h  gtim.h  rcc.h
hal/inc/: core.h  flash.h  gpio.h  irq.h  rcc.h  usart.h
hal/src/: core.c  gpio.c  rcc.c  usart.c
